--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,15 @@
-<p>
-	Add a component Dynamically using Dynamic Component Service
-</p>
-
-<button (click)="addDynamicComponent()">Add Dynamic Component</button>
-
-<div #container></div>
-
-<hr>
-
-<p>Create a Dynamic Component using dynamic-selector wrapper component:</p>
-<button (click)="showComponent = true">Create Component</button>
-<app-dynamic-selector *ngIf="showComponent"
-[inputs]="{inputValue: 'My Input Value'}"
-[componentSelector]="'app-dynamic1'"
-[moduleLoaderFunction]="getModuleLoader()"
-></app-dynamic-selector>
+<p>my solution</p>
+<ng-container *ngIf="loading">
+  <form #form="ngForm">
+    <ng-template
+      [(ngModel)]="data.firstName"
+      [name]="'firstName'"
+      appEditDynamicComponent
+    ></ng-template>
+    <ng-template
+      [(ngModel)]="data.lastName"
+      [name]="'lastName'"
+      appEditDynamicComponent
+    ></ng-template>
+  </form>
+</ng-container>
